[gd_scene load_steps=3 format=3 uid="uid://ckgj6t8n3a42n"]

[ext_resource type="Script" uid="uid://ckfq00pgafqx1" path="res://arcade.gd" id="1_658re"]
[ext_resource type="Texture2D" uid="uid://dnesu5s4u32s" path="res://imagen/istockphoto-646026398-612x612.jpg" id="2_4ltp0"]

[node name="arcade" type="Node2D"]
script = ExtResource("1_658re")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1151.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ltp0")
expand_mode = 1

[node name="Button" type="Button" parent="."]
offset_left = 87.0
offset_top = 184.0
offset_right = 409.0
offset_bottom = 331.0

[node name="Button2" type="Button" parent="."]
offset_left = 410.0
offset_top = 184.0
offset_right = 732.0
offset_bottom = 331.0

[node name="Button3" type="Button" parent="."]
offset_left = 733.0
offset_top = 184.0
offset_right = 1055.0
offset_bottom = 331.0

[node name="Button4" type="Button" parent="."]
offset_left = 87.0
offset_top = 332.0
offset_right = 409.0
offset_bottom = 479.0

[node name="Button5" type="Button" parent="."]
offset_left = 410.0
offset_top = 332.0
offset_right = 732.0
offset_bottom = 479.0

[node name="Button6" type="Button" parent="."]
offset_left = 733.0
offset_top = 332.0
offset_right = 1055.0
offset_bottom = 479.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
